# dispatcho

./: .gitignore  LICENSE  README.md  pyproject.toml
dispatcho/: __init__.py  classifier.py  param_extractor.py  router.py  train.py  training_data.json
tests/: test_classifier.py  test_exhaustive.py  test_router.py
