[project]
name = "dispatcho"
version = "1.0.0"
description = "Intent classifier for tool operations — classifies natural language into file/git/dev commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastembed>=0.2",
    "numpy>=1.24",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
